// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Calendar /> <AppointmentForm /> should render correctly 1`] = `
<View>
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FF9505",
          "borderColor": "rgba(155,155,155,0.5)",
          "borderWidth": 1,
          "display": "flex",
          "flexBasis": 40,
          "justifyContent": "center",
          "marginLeft": "15%",
          "marginRight": "15%",
          "marginTop": 20,
        },
        Object {
          "shadowColor": "black",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.2,
          "shadowRadius": 5,
        },
      ]
    }
    title="Press me"
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "white",
          "fontSize": 16,
        }
      }
    >
      ADD APPOINTMENT
    </Text>
  </TouchableOpacity>
  <ContentHeader />
  <Component
    animationType="slide"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={false}
    visible={false}
  >
    <View
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "center",
        }
      }
    >
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Object {
              "fontSize": 25,
              "textAlign": "center",
            }
          }
        >
          Create new appointment
        </Text>
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        htmlFor="date"
        style={
          Object {
            "marginBottom": 3,
            "marginLeft": "15%",
            "marginRight": "15%",
            "marginTop": 10,
          }
        }
      >
        Date - YYYY-MM-DD
      </Text>
      <TextInput
        onChangeText={[Function]}
        placeholder="YYYY-MM-DD"
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "borderColor": "rgba(155,155,155,0.5)",
              "borderWidth": 1,
              "flexBasis": 40,
              "marginLeft": "15%",
              "marginRight": "15%",
              "padding": 5,
            },
            Object {
              "shadowColor": "black",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.2,
              "shadowRadius": 5,
            },
          ]
        }
        value=""
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        htmlFor="time"
        style={
          Object {
            "marginBottom": 3,
            "marginLeft": "15%",
            "marginRight": "15%",
            "marginTop": 10,
          }
        }
      >
        Time - HH:MM
      </Text>
      <TextInput
        onChangeText={[Function]}
        placeholder="HH:MM"
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "borderColor": "rgba(155,155,155,0.5)",
              "borderWidth": 1,
              "flexBasis": 40,
              "marginLeft": "15%",
              "marginRight": "15%",
              "padding": 5,
            },
            Object {
              "shadowColor": "black",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.2,
              "shadowRadius": 5,
            },
          ]
        }
        value=""
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        htmlFor="title"
        style={
          Object {
            "marginBottom": 3,
            "marginLeft": "15%",
            "marginRight": "15%",
            "marginTop": 10,
          }
        }
      >
        Title
      </Text>
      <TextInput
        onChangeText={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "borderColor": "rgba(155,155,155,0.5)",
              "borderWidth": 1,
              "flexBasis": 40,
              "marginLeft": "15%",
              "marginRight": "15%",
              "padding": 5,
            },
            Object {
              "shadowColor": "black",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.2,
              "shadowRadius": 5,
            },
          ]
        }
        value=""
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        htmlFor="what"
        style={
          Object {
            "marginBottom": 3,
            "marginLeft": "15%",
            "marginRight": "15%",
            "marginTop": 10,
          }
        }
      >
        What
      </Text>
      <TextInput
        onChangeText={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "borderColor": "rgba(155,155,155,0.5)",
              "borderWidth": 1,
              "flexBasis": 40,
              "marginLeft": "15%",
              "marginRight": "15%",
              "padding": 5,
            },
            Object {
              "shadowColor": "black",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.2,
              "shadowRadius": 5,
            },
          ]
        }
        value=""
      />
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#FF9505",
              "borderColor": "rgba(155,155,155,0.5)",
              "borderWidth": 1,
              "display": "flex",
              "flexBasis": 40,
              "justifyContent": "center",
              "marginLeft": "15%",
              "marginRight": "15%",
              "marginTop": 20,
            },
            Object {
              "shadowColor": "black",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.2,
              "shadowRadius": 5,
            },
          ]
        }
        title="Submit"
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "white",
              "fontSize": 16,
            }
          }
        >
          Submit
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#FF9505",
              "borderColor": "rgba(155,155,155,0.5)",
              "borderWidth": 1,
              "display": "flex",
              "flexBasis": 40,
              "justifyContent": "center",
              "marginLeft": "15%",
              "marginRight": "15%",
              "marginTop": 20,
            },
            Object {
              "shadowColor": "black",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.2,
              "shadowRadius": 5,
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "white",
              "fontSize": 16,
            }
          }
        >
          Cancel
        </Text>
      </TouchableOpacity>
    </View>
  </Component>
</View>
`;

exports[`<Calendar /> <ContentHeader /> should render correctly 1`] = `
<View
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "justifyContent": "center",
      "marginTop": 20,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "flexBasis": "33%",
        "fontSize": 18,
        "marginBottom": 20,
        "textAlign": "center",
      }
    }
  >
    When
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "flexBasis": "33%",
        "fontSize": 18,
        "marginBottom": 20,
        "textAlign": "center",
      }
    }
  >
    Title
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "flexBasis": "33%",
        "fontSize": 18,
        "marginBottom": 20,
        "textAlign": "center",
      }
    }
  >
    About
  </Text>
</View>
`;

exports[`<Calendar /> <Week /> should render correctly 1`] = `
<View
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "justifyContent": "center",
    }
  }
>
  <Day
    dateFull="2017-10-17"
    dayDate={17}
    dayName="TODAY"
    key="2017-10-17"
  />
  <Day
    dateFull="2017-10-18"
    dayDate={18}
    dayName="TOMORROW"
    key="2017-10-18"
  />
  <Day
    dateFull="2017-10-19"
    dayDate={19}
    dayName="THURSDAY"
    key="2017-10-19"
  />
  <Day
    dateFull="2017-10-20"
    dayDate={20}
    dayName="FRIDAY"
    key="2017-10-20"
  />
  <Day
    dateFull="2017-10-21"
    dayDate={21}
    dayName="SATURDAY"
    key="2017-10-21"
  />
  <Day
    dateFull="2017-10-22"
    dayDate={22}
    dayName="SUNDAY"
    key="2017-10-22"
  />
  <Day
    dateFull="2017-10-23"
    dayDate={23}
    dayName="MONDAY"
    key="2017-10-23"
  />
</View>
`;

exports[`<Calendar /> should render correctly 1`] = `
<View
  style={
    Object {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
      "marginBottom": 20,
      "marginTop": 40,
    }
  }
>
  <Week
    change={[Function]}
  />
  <View
    style={
      Object {
        "display": "flex",
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <AppointmentForm
      getValues={[Function]}
    />
    <ScrollViewMock
      style={
        Object {
          "height": "100%",
        }
      }
    >
      <View
        key="0"
        style={
          Object {
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Object {
              "flexBasis": "90%",
              "fontSize": 20,
              "marginTop": "10%",
              "textAlign": "center",
            }
          }
        >
          You don't have any plans!
        </Text>
      </View>
    </ScrollViewMock>
  </View>
</View>
`;
